--- a/compose/prometheus.docker-compose.yml
+++ b/compose/prometheus.docker-compose.yml
@@ -7,6 +7,7 @@ services:
     networks:
       - traefik_proxy
     restart: unless-stopped
+    user: "1000"
     volumes:
       - ~/.dockerServices/prometheus/data:/prometheus
       - ~/.dockerServices/prometheus/config:/etc/prometheus
